################################################################################################
#
#    Algorithm Sample Project
#    
#    Contains a set of sample implementations of various algorithms and data structures.
#
################################################################################################

cmake_minimum_required (VERSION 3.0.0)
#set(CMAKE_C_FLAGS "-std=c11")
project (Algorithms C)

add_subdirectory(cee)
add_subdirectory(cpp)

################################################################################################
